works with google now, too
Something is wrong with the redirect uri for google. Could be part of
my setup in google dev console, or this app. I hardcoded it into
settings.py to fix the problem, but there is a different issue causing
this

--- a/PosterScoresFrontend/src/app/main/main.html
+++ b/PosterScoresFrontend/src/app/main/main.html
@@ -21,6 +21,7 @@
 
     <div class="col">
         <button class="btn btn-primary" ng-click="main.authenticate('facebook')">Auth with Facebook</button>
+        <button class="btn btn-primary" ng-click="main.authenticate('google')">Auth with Google</button>
 
         <p>You are logged in? {{ main.loggedIn }}</p>
         <p>User is {{ main.user.first }} {{ main.user.last }}</p>
