Using rest-social-auth's new jwt routes
Deleted the social_user_auth django app and using the new
rest-social-auth jwt views.

--- a/PosterScoresFrontend/src/app/main/main.html
+++ b/PosterScoresFrontend/src/app/main/main.html
@@ -24,7 +24,7 @@
         <button class="btn btn-primary" ng-click="main.authenticate('google')">Auth with Google</button>
 
         <p>You are logged in? {{ main.loggedIn }}</p>
-        <p>User is {{ main.user.first }} {{ main.user.last }}</p>
+        <p>User is {{ main.user.username }}, with email {{ main.user.email }}</p>
     </div>
 
 </div>
